@@ -9,7 +9,6 @@ bound workloads. It is based on a log-structured merge-tree (LSM tree)
 data structure.
 
 This extension is the Tcl interface to the RocksDB.
-Now tcl-rocksdb at an early development stage (or a prototype).
 
 
 License
@@ -79,13 +78,14 @@ rocksdb open -path path ?-readonly BOOLEAN? ?-create_if_missing BOOLEAN?
  ?-max_open_files number? ?-compression type?   
 rocksdb repair name  
 rocksdb destroy name  
-DB_HANDLE get key ?-fillCache BOOLEAN?  
+DB_HANDLE get key ?-fillCache BOOLEAN? ?-snapshot HANDLE?  
 DB_HANDLE put key value ?-sync BOOLEAN?  
 DB_HANDLE delete key ?-sync BOOLEAN?  
 DB_HANDLE exists key  
 DB_HANDLE write BAT_HANDLE  
 DB_HANDLE batch  
-DB_HANDLE iterator  
+DB_HANDLE iterator ?-snapshot HANDLE?  
+DB_HANDLE snapshot  
 DB_HANDLE getApproximateSizes start limit  
 DB_HANDLE getName  
 DB_HANDLE getProperty property  
@@ -102,6 +102,7 @@ IT_HANDLE close
 BAT_HANDLE put key value  
 BAT_HANDLE delete key  
 BAT_HANDLE close  
+SNAPSHOT_HANDLE close -db DB_HANDLE  
 
 The command `rocksdb open` create a database handle. -path option is the path 
 of the database to open.
@@ -116,10 +117,13 @@ contains important information.
 `rocksdb destroy` destroy the contents of the specified database.
 Be very careful using this method.
 
-`DB_HANDLE iterator` create an Iterator handle.
-
 `DB_HANDLE batch` create a WriteBatch handle. Users can use `DB_HANDLE write`
 to apply a set of updates.
+
+`DB_HANDLE iterator` create an Iterator handle.
+
+`DB_HANDLE snapshot` created a Snapshot handle. Snapshots provide consistent
+read-only views over the entire state of the key-value store.
 
 `DB_HANDLE getApproximateSizes` get the approximate file system space.
 Note that the returned sizes measure file system space usage,
@@ -187,4 +191,47 @@ WriteBatch example:
     $it close
     $dbi close
 
+Snapshot example:
+
+    package require rocksdb
+
+    set dbi [rocksdb open -path "./testdb" -create_if_missing 1 \
+             -compression snappy]
+    $dbi put "test1" "1234567890"
+    $dbi put "test2" "2345678901"
+    $dbi put "test3" "3456789010"
+    $dbi put "test4" "4567890102"
+    $dbi put "test5" "5678901023"
+    set snapshot [$dbi snapshot]
+
+    $dbi put "test1" "It is the world after snapshot!!!"
+
+    # get
+    set value [$dbi get "test1" -snapshot $snapshot]
+    puts "Is is snapshot version: $value"
+
+    set value [$dbi get "test1"]
+    puts "Is is current version: $value"
+
+    # Iterator
+    puts "It is snapshot version:"
+    set it [$dbi iterator -snapshot $snapshot]
+    for {$it seektofirst} {[$it valid] == 1} {$it next} {
+        set key [$it key]
+        set value [$it value]
+        puts "Iterator --- I get $key: $value"
+    }
+    $it close
+
+    puts "It is current version:"
+    set it [$dbi iterator]
+    for {$it seektofirst} {[$it valid] == 1} {$it next} {
+        set key [$it key]
+        set value [$it value]
+        puts "Iterator --- I get $key: $value"
+    }
+    $it close
+
+    $snapshot close -db $dbi
+    $dbi close
 
