@@ -34,6 +34,7 @@ typedef struct ThreadSpecificData {
   int dbi_count;
   int itr_count;
   int bat_count;
+  int sst_count;
 } ThreadSpecificData;
 
 static Tcl_ThreadDataKey dataKey;
@@ -50,6 +51,127 @@ void ROCKSDB_Thread_Exit(ClientData clientdata)
     Tcl_DeleteHashTable(tsdPtr->rocksdb_hashtblPtr);
     ckfree(tsdPtr->rocksdb_hashtblPtr);
   }
+}
+
+
+static int ROCKSDB_SST(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*objv){
+  int choice;
+  const rocksdb::Snapshot* shot;
+  Tcl_HashEntry *hashEntryPtr;
+  char *sstHandle;
+
+  ThreadSpecificData *tsdPtr = (ThreadSpecificData *)
+      Tcl_GetThreadData(&dataKey, sizeof(ThreadSpecificData));
+
+  if (tsdPtr->initialized == 0) {
+    tsdPtr->initialized = 1;
+    tsdPtr->rocksdb_hashtblPtr = (Tcl_HashTable *) ckalloc(sizeof(Tcl_HashTable));
+    Tcl_InitHashTable(tsdPtr->rocksdb_hashtblPtr, TCL_STRING_KEYS);
+  }
+  static const char *SST_strs[] = {
+    "close",
+    0
+  };
+
+  enum SST_enum {
+    SST_CLOSE,
+  };
+
+  if( objc < 2 ){
+    Tcl_WrongNumArgs(interp, 1, objv, "SUBCOMMAND ...");
+    return TCL_ERROR;
+  }
+
+  if( Tcl_GetIndexFromObj(interp, objv[1], SST_strs, "option", 0, &choice) ){
+    return TCL_ERROR;
+  }
+
+  /*
+   * Get the rocksdb::Snapshot value
+   */
+  sstHandle = Tcl_GetStringFromObj(objv[0], 0);
+  hashEntryPtr = Tcl_FindHashEntry( tsdPtr->rocksdb_hashtblPtr, sstHandle );
+  if( !hashEntryPtr ) {
+    if( interp ) {
+        Tcl_Obj *resultObj = Tcl_GetObjResult( interp );
+
+        Tcl_AppendStringsToObj( resultObj, "invalid snapshot handle ", sstHandle, (char *)NULL );
+    }
+
+    return TCL_ERROR;
+  }
+
+  shot = (rocksdb::Snapshot *)(uintptr_t)Tcl_GetHashValue( hashEntryPtr );
+
+  switch( (enum SST_enum)choice ){
+
+    case SST_CLOSE: {
+      rocksdb::DB* db;
+      const char *dbiHandle = NULL;
+      int len = 0;
+      char *zArg;
+      int i = 0;
+      Tcl_HashEntry *dbHashEntryPtr;
+
+      if( objc != 4 ){
+        Tcl_WrongNumArgs(interp, 2, objv, "-db DB_HANDLE ");
+        return TCL_ERROR;
+      }
+
+      for(i=2; i+1<objc; i+=2){
+        zArg = Tcl_GetStringFromObj(objv[i], 0);
+
+        if( strcmp(zArg, "-db")==0 ){
+            dbiHandle = Tcl_GetStringFromObj(objv[i+1], &len);
+            if(!dbiHandle || len < 1) {
+                return TCL_ERROR;
+            }
+        } else{
+           Tcl_AppendResult(interp, "unknown option: ", zArg, (char*)0);
+           return TCL_ERROR;
+        }
+      }
+
+      /*
+       * Get the rocksdb::DB value
+       */
+
+      if(!dbiHandle) {
+        if( interp ) {
+            Tcl_Obj *resultObj = Tcl_GetObjResult( interp );
+
+            Tcl_AppendStringsToObj( resultObj, "invalid db handle (null) ", dbiHandle, (char *)NULL );
+        }
+
+        return TCL_ERROR;
+      }
+
+      dbHashEntryPtr = Tcl_FindHashEntry( tsdPtr->rocksdb_hashtblPtr, dbiHandle );
+      if( !dbHashEntryPtr ) {
+        if( interp ) {
+            Tcl_Obj *resultObj = Tcl_GetObjResult( interp );
+
+            Tcl_AppendStringsToObj( resultObj, "invalid db handle ", dbiHandle, (char *)NULL );
+        }
+
+        return TCL_ERROR;
+      }
+
+      db = (rocksdb::DB *)(uintptr_t)Tcl_GetHashValue( dbHashEntryPtr );
+      db->ReleaseSnapshot(shot);
+
+      Tcl_MutexLock(&myMutex);
+      if( hashEntryPtr )  Tcl_DeleteHashEntry(hashEntryPtr);
+      Tcl_MutexUnlock(&myMutex);
+
+      Tcl_DeleteCommand(interp, sstHandle);
+      Tcl_SetObjResult(interp, Tcl_NewIntObj( 0 ));
+
+      break;
+    }
+  }
+
+  return TCL_OK;
 }
 
 
@@ -116,7 +238,7 @@ static int ROCKSDB_BAT(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*obj
       rocksdb::Slice key2;
       rocksdb::Slice value2;
 
-      if( objc < 4 || (objc&1)!=0) {
+      if( objc != 4 ) {
         Tcl_WrongNumArgs(interp, 2, objv, "key data ");
         return TCL_ERROR;
       }
@@ -146,7 +268,7 @@ static int ROCKSDB_BAT(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*obj
       int key_len = 0;
       rocksdb::Slice key2;
 
-      if( objc < 3 || (objc&1)!=1) {
+      if( objc != 3 ) {
         Tcl_WrongNumArgs(interp, 2, objv, "key ");
         return TCL_ERROR;
       }
@@ -460,6 +582,7 @@ static int ROCKSDB_DBI(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*obj
     "write",
     "batch",
     "iterator",
+    "snapshot",
     "getApproximateSizes",
     "getName",
     "getProperty",
@@ -475,6 +598,7 @@ static int ROCKSDB_DBI(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*obj
     DBI_WRITE,
     DBI_BATCH,
     DBI_ITERATOR,
+    DBI_SNAPSHOT,
     DBI_GETAPPROXIMATESIZES,
     DBI_GETNAME,
     DBI_GETPROPERTY,
@@ -519,9 +643,13 @@ static int ROCKSDB_DBI(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*obj
       char *zArg;
       int i = 0;
       Tcl_Obj *pResultStr = NULL;
+      const rocksdb::Snapshot* shot = NULL;
+      Tcl_HashEntry *sstHashEntryPtr;
+      const char *sstHandle = NULL;
+      int sst_length = 0;
 
       if( objc < 3 || (objc&1)!=1) {
-        Tcl_WrongNumArgs(interp, 2, objv, "key ?-fillCache BOOLEAN? ");
+        Tcl_WrongNumArgs(interp, 2, objv, "key ?-fillCache BOOLEAN? ?-snapshot HANDLE? ");
         return TCL_ERROR;
       }
 
@@ -541,10 +669,32 @@ static int ROCKSDB_DBI(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*obj
             }else{
               read_options.fill_cache = false;
             }
+        } else if( strcmp(zArg, "-snapshot")==0 ){
+            sstHandle = Tcl_GetStringFromObj(objv[i+1], &sst_length);
+
+            if( !sstHandle || sst_length < 1) {
+              return TCL_ERROR;
+            }
         } else{
            Tcl_AppendResult(interp, "unknown option: ", zArg, (char*)0);
            return TCL_ERROR;
         }
+      }
+
+      if(sstHandle) {
+          sstHashEntryPtr = Tcl_FindHashEntry( tsdPtr->rocksdb_hashtblPtr, sstHandle );
+          if( !sstHashEntryPtr ) {
+            if( interp ) {
+                Tcl_Obj *resultObj = Tcl_GetObjResult( interp );
+
+                Tcl_AppendStringsToObj( resultObj, "invalid snapshot handle ", sstHandle, (char *)NULL );
+            }
+
+            return TCL_ERROR;
+          }
+
+          shot = (rocksdb::Snapshot *)(uintptr_t)Tcl_GetHashValue( sstHashEntryPtr );
+          read_options.snapshot = shot;
       }
 
       key2 = rocksdb::Slice(key, key_len);
@@ -770,17 +920,55 @@ static int ROCKSDB_DBI(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*obj
     }
 
     case DBI_ITERATOR: {
+      rocksdb::ReadOptions read_options;
       Tcl_HashEntry *newHashEntryPtr;
       char handleName[16 + TCL_INTEGER_SPACE];
       Tcl_Obj *pResultStr = NULL;
       int newvalue;
+      const rocksdb::Snapshot* shot = NULL;
+      Tcl_HashEntry *sstHashEntryPtr;
+      const char *sstHandle = NULL;
+      int sst_length = 0;
+      char *zArg;
+      int i = 0;
 
-      if( objc != 2 ) {
-        Tcl_WrongNumArgs(interp, 2, objv, 0);
+      if( objc < 2 || (objc&1)!=0) {
+        Tcl_WrongNumArgs(interp, 2, objv, "?-snapshot HANDLE? ");
         return TCL_ERROR;
       }
 
-      rocksdb::Iterator* it = db->NewIterator(rocksdb::ReadOptions());
+      for(i=2; i+1<objc; i+=2){
+        zArg = Tcl_GetStringFromObj(objv[i], 0);
+
+        if( strcmp(zArg, "-snapshot")==0 ){
+            sstHandle = Tcl_GetStringFromObj(objv[i+1], &sst_length);
+
+            if( !sstHandle || sst_length < 1) {
+              return TCL_ERROR;
+            }
+        } else{
+           Tcl_AppendResult(interp, "unknown option: ", zArg, (char*)0);
+           return TCL_ERROR;
+        }
+      }
+
+      if(sstHandle) {
+          sstHashEntryPtr = Tcl_FindHashEntry( tsdPtr->rocksdb_hashtblPtr, sstHandle );
+          if( !sstHashEntryPtr ) {
+            if( interp ) {
+                Tcl_Obj *resultObj = Tcl_GetObjResult( interp );
+
+                Tcl_AppendStringsToObj( resultObj, "invalid snapshot handle ", sstHandle, (char *)NULL );
+            }
+
+            return TCL_ERROR;
+          }
+
+          shot = (rocksdb::Snapshot *)(uintptr_t)Tcl_GetHashValue( sstHashEntryPtr );
+          read_options.snapshot = shot;
+      }
+
+      rocksdb::Iterator* it = db->NewIterator(read_options);
 
       Tcl_MutexLock(&myMutex);
       sprintf( handleName, "rocksitr%d", tsdPtr->itr_count++ );
@@ -792,6 +980,37 @@ static int ROCKSDB_DBI(void *cd, Tcl_Interp *interp, int objc,Tcl_Obj *const*obj
       Tcl_MutexUnlock(&myMutex);
 
       Tcl_CreateObjCommand(interp, handleName, (Tcl_ObjCmdProc *) ROCKSDB_ITR,
+          (ClientData)NULL, (Tcl_CmdDeleteProc *)NULL);
+
+      Tcl_SetObjResult(interp, pResultStr);
+
+      break;
+    }
+
+    case DBI_SNAPSHOT: {
+      Tcl_HashEntry *newHashEntryPtr;
+      char handleName[16 + TCL_INTEGER_SPACE];
+      Tcl_Obj *pResultStr = NULL;
+      int newvalue;
+      const rocksdb::Snapshot* shot;
+
+      if( objc != 2 ) {
+        Tcl_WrongNumArgs(interp, 2, objv, 0);
+        return TCL_ERROR;
+      }
+
+      shot = db->GetSnapshot();
+
+      Tcl_MutexLock(&myMutex);
+      sprintf( handleName, "rockssst%d", tsdPtr->sst_count++ );
+
+      pResultStr = Tcl_NewStringObj( handleName, -1 );
+
+      newHashEntryPtr = Tcl_CreateHashEntry(tsdPtr->rocksdb_hashtblPtr, handleName, &newvalue);
+      Tcl_SetHashValue(newHashEntryPtr, (ClientData)(uintptr_t) shot);
+      Tcl_MutexUnlock(&myMutex);
+
+      Tcl_CreateObjCommand(interp, handleName, (Tcl_ObjCmdProc *) ROCKSDB_SST,
           (ClientData)NULL, (Tcl_CmdDeleteProc *)NULL);
 
       Tcl_SetObjResult(interp, pResultStr);
@@ -1267,7 +1486,7 @@ Rocksdb_Init(Tcl_Interp *interp)
     }
 
     /*
-     *   Tcl_GetThreadData handles the auto-initialization of all data in
+     *  Tcl_GetThreadData handles the auto-initialization of all data in
      *  the ThreadSpecificData to NULL at first time.
      */
     Tcl_MutexLock(&myMutex);
@@ -1282,6 +1501,7 @@ Rocksdb_Init(Tcl_Interp *interp)
         tsdPtr->dbi_count = 0;
         tsdPtr->itr_count = 0;
         tsdPtr->bat_count = 0;
+        tsdPtr->sst_count = 0;
     }
     Tcl_MutexUnlock(&myMutex);
 
