@@ -1,3 +1,7 @@
+2017-08-24  Danilo Chang
+
+     * Add snapshot function
+
 2017-08-23  Danilo Chang
 
      * Bump version to v0.2.1
